--- a/src/index.html
+++ b/src/index.html
@@ -13,11 +13,13 @@
   <meta name="msapplication-tap-highlight" content="no" />
   <meta name="description" content="Entrepreneur Studio est la plateforme des entrepreneurs, créateurs d'entreprises, innovateurs, porteurs de projets, des personnes aux idées nouvelles. Trouver une idée de business, valider son marché et son produit, créer son entreprise, etc." property="description">
   <meta name="keywords" content="Entrepreneur,Business,création entreprise,validation d'idée,incubateur,business plan,Ideation,innovation,Startup,Indépendant,Activité professionnelle" property="keywords">
+  
   <meta name="og:title" content="Entrepreneur Studio" property="og:title">
+  <meta property="og:image" content="http://entrepreneur-studio.com/assets/images/previewWebPage.png" />
+  <meta name="og:description" content="Entrepreneur Studio est la plateforme des entrepreneurs, créateurs d'entreprises, innovateurs, porteurs de projets, des personnes aux idées nouvelles. Trouver une idée de business, valider son marché et son produit, créer son entreprise, etc." property="og:description">
 
   <link rel="icon" type="image/ico" href="assets/icon/favicon.ico"/>
 
-  <meta name="og:description" content="Entrepreneur Studio est la plateforme des entrepreneurs, créateurs d'entreprises, innovateurs, porteurs de projets, des personnes aux idées nouvelles. Trouver une idée de business, valider son marché et son produit, créer son entreprise, etc." property="og:description">
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
