--- a/src/index.html
+++ b/src/index.html
@@ -11,12 +11,13 @@
   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <meta name="format-detection" content="telephone=no" />
   <meta name="msapplication-tap-highlight" content="no" />
-  <meta name="description" content="Entrepreneur Studio est la plateforme des entrepreneurs, créateurs d'entreprises, innovateurs, porteurs de projets, des personnes aux idées nouvelles. Trouver une idée de business, valider son marché et son produit, créer son entreprise, etc." property="description">
-  <meta name="keywords" content="Entrepreneur,Business,création entreprise,validation d'idée,incubateur,business plan,Ideation,innovation,Startup,Indépendant,Activité professionnelle" property="keywords">
+  <meta name="description" content="Entrepreneur-Studio est la plateforme des entrepreneurs, créateurs d'entreprises, innovateurs, porteurs de projets, des personnes aux idées nouvelles. Trouver une idée de business, valider son marché et son produit, créer son entreprise, etc." property="description">
+  <meta name="keywords" content="Entrepreneur-Studio,Entrepreneur,Business,création entreprise,validation d'idée,incubateur,business plan,Ideation,innovation,Startup,Indépendant,Activité professionnelle" property="keywords">
   
-  <meta name="og:title" content="Entrepreneur Studio" property="og:title">
+  <meta name="og:title" content="Entrepreneur-Studio" property="og:title">
+  <meta name="og:url," content="Entrepreneur-Studio.com" property="og:url">
   <meta property="og:image" content="http://entrepreneur-studio.com/assets/images/previewWebPage.png" />
-  <meta name="og:description" content="Entrepreneur Studio est la plateforme des entrepreneurs, créateurs d'entreprises, innovateurs, porteurs de projets, des personnes aux idées nouvelles. Trouver une idée de business, valider son marché et son produit, créer son entreprise, etc." property="og:description">
+  <meta name="og:description" content="Entrepreneur-Studio est la plateforme des entrepreneurs, créateurs d'entreprises, innovateurs, porteurs de projets, des personnes aux idées nouvelles. Trouver une idée de business, valider son marché et son produit, créer son entreprise, etc." property="og:description">
 
   <link rel="icon" type="image/ico" href="assets/icon/favicon.ico"/>
 
