new Conseil page

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
   <meta name="og:url," content="Entrepreneur-Studio.com" property="og:url">
   <meta property="og:image" content="http://entrepreneur-studio.com/assets/images/previewWebPage.png" />
   <meta name="og:description" content="Entrepreneur Studio est la plateforme des entrepreneurs, créateurs d'entreprises, innovateurs, porteurs de projets, des personnes aux idées nouvelles. Trouver une idée de business, valider son marché et son produit, créer son entreprise, etc." property="og:description">
+  <script src="https://maps.googleapis.com/maps/api/js?libraries=places&amp;key=AIzaSyA4g4_yOt1sZyD5V_EiW1a2gtuAIRJfrvI"></script>
 
   <link rel="icon" type="image/ico" href="assets/icon/favicon.ico"/>
 
